--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,23 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Yi Lin
+email: qinsoon@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Software Engineer, language VMs & web dev, PhD
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "qinsoon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  qinsoon
+linkedin_username: qinsoon
 
 # Build settings
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
+
+github:
+  - is_project_page: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
