--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 
 - title: About me
   url: /
-- title: CV
+- title: CURRICULUM VITAE
   url: ./assets/yilin_cv.pdf
-# - title: Posts
-#   url: /posts/
+- title: BLOGS
+  url: ./posts
 # - title: Categories
 #   url: /categories/
 # - title: Tags
